<resources>
    <string name="app_name">Faces game</string>

    <string name="main_menu_new_game">New Game</string>
    <string name="main_menu_about_the_game">About</string>
    <string name="main_menu_records">Records</string>
    <string name="main_menu_quit">Quit</string>
    <string name="main_menu_title">Faces Game</string>
    <string name="main_menu_next">Next</string>

    <string name="loading_data">Loading game data</string>
    <string name="loading_screen_dialog_failed_exit">Exit</string>

    <string name="end_game_game_over">GAME OVER</string>
    <string name="end_game_score">Score: </string>
    <string name="end_game_correct_answers">correct</string>
    <string name="end_game_main_menu">Back</string>
    <string name="end_game_again">Again!</string>
    <string name="end_game_achievements_unlocked">Achievements unlocked: </string>
    <string name="end_game_no_achievements">No new achievements. Keep on playing!</string>

    <string name="game_default_score">0</string>

    <string name="title_activity_top_score">TopScore</string>
    <string name="title_activity_collectables">Achievements</string>
    <string name="title_activity_about">About</string>

    <string name="action_settings">Settings</string>
    <string name="top_score_title">Top Scores</string>
    <string name="top_score_default_player">You</string>
    <string name="top_score_correct_answers">correct answers</string>
    <string name="main_menu_collectable">Achievements</string>
    <string name="collectable_test">Grucho: award for answering spree of 5!</string>
    <string name="collectable_no_selection">Select a face</string>
    <string name="signin_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="signin_failure">Unable to sign in.</string>

    <string name="about_concept">Concept</string>
    <string name="about_concept_actor">Roman Subik</string>
    <string name="about_programming">Programming</string>
    <string name="about_programming_actor">Roman Subik</string>
    <string name="about_testing">Testing</string>
    <string name="about_testing_actor">Sabina Subik, Tomasz Subik</string>
    <string name="about_legal">Legal matters</string>
    <string name="about_legal_actor">Sabina Subik, Roman Subik</string>
    <string name="about_additional_scripting">Gathering resources</string>
    <string name="about_additional_scripting_actor">Roman Subik</string>
    <string name="about_faces">Achievement gfx</string>
    <string name="about_faces_actor">http://artdesigncat.com/</string>
    <string name="about_photos">Photos</string>
    <string name="about_photos_actor">Wikimedia Commons</string>
    <string name="about_additional_gfx">Additional gfx</string>
    <string name="about_additional_gfx_actor">http://sekkyumu.deviantart.com/ , https://www.iconfinder.com/konekierto , http://www.icojam.com/</string>
    <string name="about_play_store_gfx">Play store gfx</string>
    <string name="about_play_store_gfx_actor">https://icons8.com/</string>
    <string name="about_library">Game uses library</string>
    <string name="about_library_actor">https://github.com/daimajia/AndroidViewAnimations</string>
    <string name="about_wiki">Legal notice</string>
    <string name="about_wiki_actor">Author of this app used only pictures available on copyleft licenses: Creative Commons, Public Domain, GNU GPL. See: https://github.com/RomekRJM/FacesGame#special-thanks-to for more details.</string>
    <string name="about_special_thx">Special thanks</string>
    <string name="about_special_thx_actor">.. goes to my wife Sabina and son Eryk, for their understanding and support.</string>

    <string name="share_button_connected">Share</string>
    <string name="share_button_nothing_to_publish">Nothing to show yet...</string>
    <string name="share_button_all_published">My progress</string>
    <string name="share_button_connecting">Connecting ...</string>
    <string name="share_button_retry_connection">Retry connecting</string>

</resources>
