<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/TextAppearance.Medium"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutConcept"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_concept"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/about_concept_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/about_concept_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_programming"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_programming"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/about_programming_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/about_programming_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_testing"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_testing"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/testing_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/about_testing_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_additional_scripting"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_additional_scripting"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/about_additional_scripting_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/about_additional_scripting_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_photos"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/about_photos_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/about_photos_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_faces"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_faces"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/about_faces_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/about_faces_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_additional_gfx"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_additional_gfx"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/about_additional_gfx_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/about_additional_gfx_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_play_store_gfx"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_play_store_gfx"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/about_play_store_gfx_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/about_play_store_gfx_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_library"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_library"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/about_library_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/about_library_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_special_thx"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_special_thx"
                android:textColor="@color/gold" />

            <TextView
                android:id="@+id/about_special_thx_actor"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autoLink="web"
                android:gravity="center"
                android:text="@string/about_special_thx_actor"
                android:textColor="@color/apptheme_color"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>