<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:id="@+id/logoTitle"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo_title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo_globe"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/globe128"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_new_game" />

        <Button
            android:id="@+id/records_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_records" />

        <Button
            android:id="@+id/collectable_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_collectable" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/versionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="v0.5"
            android:layout_alignBaseline="@+id/quit_button"
            android:textColor="#888888"/>

        <Button
            android:id="@+id/quit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_quit"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/about_the_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_about_the_game"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</RelativeLayout>